--- a/clanok.tex
+++ b/clanok.tex
@@ -108,7 +108,7 @@ Niekedy je potrebné nadpisom označiť odsek. Text pokračuje hneď za nadpisom
 
 \section{Ešte dôležitejšia časť} \label{dolezitejsia}
 
-
+\section{Skusanie prveho Git commitu} \label{gitcommits}
 
 
 \section{Záver} \label{zaver} % prípadne iný variant názvu
