--- a/clanok.tex
+++ b/clanok.tex
@@ -109,7 +109,7 @@ Niekedy je potrebné nadpisom označiť odsek. Text pokračuje hneď za nadpisom
 \section{Ešte dôležitejšia časť} \label{dolezitejsia}
 
 \section{Skusanie prveho Git commitu} \label{gitcommits}
-
+\section{Skusanie druheho Git commitu} \label{gitcommits2}
 
 \section{Záver} \label{zaver} % prípadne iný variant názvu
 
